--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "firebase": "^10.5.0",
     "nodemon": "^3.0.1"
   }
